--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     {% block head %}
-    <title>Royal Vic Fisrt Aid Kit{% block title %}{% endblock %}</title>
+    <title>Royal Vic First Aid Kit{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
          </button>
-         <a class="navbar-brand" href="/">Royal Vic Fist Aid Kit</a>
+         <a class="navbar-brand" href="/">Royal Vic First Aid Kit</a>
             <div class="nav-collapse">
                 {% block navbar_right %}
                 <ul class="nav navbar-nav pull-right">
