--- a/templates/projectsv2.html
+++ b/templates/projectsv2.html
@@ -14,7 +14,7 @@
             <div class="caption">
                 <h3>Project name</h3>
                 <p>description of the project</p>
-                <a href="#" class="btn btn-danger" role="button">Give now!</a>
+                <a href="#" class="btn btn-danger" role="button">Give now</a>
             </div>
         </div>
     </div>
@@ -30,7 +30,7 @@
             <div class="caption">
                 <h3>Project name</h3>
                 <p>description of the project</p>
-                <a href="#" class="btn btn-danger" role="button">Give now!</a>
+                <a href="#" class="btn btn-danger" role="button">Give now</a>
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@
             <div class="caption">
                 <h3>Project name</h3>
                 <p>description of the project</p>
-                <a href="#" class="btn btn-danger" role="button">Give now!</a></p>
+                <a href="#" class="btn btn-danger" role="button">Give now</a></p>
             </div>
         </div>
     </div>
