--- a/templates/base.html
+++ b/templates/base.html
@@ -17,26 +17,47 @@
     
 <body>
 {% block navbar %}
-    <div class="navbar navbar-static-top navbar-default">
-        <div class="container">
-         <button class="navbar-toggle">
+<nav class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-         </button>
-         <a class="navbar-brand" href="/">Royal Vic First Aid Kit</a>
-            <div class="nav-collapse">
-                {% block navbar_right %}
-                <ul class="nav navbar-nav pull-right">
-                    <li>Homepage</li>
-                    <li>Projects</li>
-                    <li>About</li>
-                    <li>Contact</li>
-                </ul>
-                {% endblock %}
-            </div><!--/.nav-collapse --> 
-        </div><!-- /.container -->
-    </div><!-- /.navbar navbar-static-top navbar-default -->
+        </button>
+        <a class="navbar-brand" href="#">RoyalVic First Aid Kit</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li><a href="#">Home</a></li>
+            <li class="dropdown">
+            <a href="/projects" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
+               <ul class="dropdown-menu">
+                <li><a href="/projects">All Sections</a>
+                <li class="divider"></li>
+                <li><a href="/projects/innovate">Innovate</a></li>
+                <li><a href="/projects/explore">Explore</a></li>
+                <li><a href="/projects/inspire">Inspire</a></li>
+                <li><a href="/projects/care">Care</a></li>
+               </ul>
+            </li>
+            <li><a href="about">About</a>
+        </ul>
+     <ul class="nav navbar-nav navbar-right">
+         <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>                                  
 {% endblock %}
 <div class="container page">
     <div class="content">
