add css animation

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,14 @@
 {% block title %} - Home{% endblock %}
 {% block content %}
     <div class="row">
-        <div class="col-md-3 col-md-offset-3"><img src="http://placehold.it/292x200"></div>
-        <div class="col-md-3" ><img src="http://placehold.it/292x200"></div>
+        <div class="home_square_ul col-md-3 col-md-offset-3">
+            <img class="bottom" src="http://placehold.it/292x200">
+            <img class="top" src="http://placehold.it/292x200/E8117F/000000">
+        </div>
+        <div class="home_square_br col-md-3" ><img src="http://placehold.it/292x200"></div>
     </div>
     <div class="row">
-        <div class="col-md-3 col-md-offset-3"><img src="http://placehold.it/292x200"></div>
-        <div class="col-md-3" ><img src="http://placehold.it/292x200"></div>
+        <div class="home_square_ul col-md-3 col-md-offset-3"><img src="http://placehold.it/292x200"></div>
+        <div class="home_square_ur col-md-3" ><img src="http://placehold.it/292x200"></div>
     </div>  
 {% endblock %}
