--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li class="dropdown">
             <a href="/projects" class="dropdown-toggle" data-toggle="dropdown">Projects<b class="caret"></b></a>
                <ul class="dropdown-menu">
