--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,10 @@
     <hr>
     {% block footer %}
     <footer class="footer">
-        <p>&copy; Royal Vic First Aid Kit</p>
+    <div style="margin: 0 auto, or margin-left: auto, margin-right:auto;">
+        <img src="{{ url_for('static', filename='images/MUHClogoColourTranspBkg350x75.png') }}">
+        <img src="{{ url_for('static', filename='images/RVHF-logo350x53.jpg') }}">
+    </div>    
     </footer>
     {% endblock %}
 </div><!-- /.container page -->
