--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,17 @@
 {% block content %}
     <div class="row">
         <div class="home_square_ul col-md-3 col-md-offset-3">
-            <img class="bottom" src="http://placehold.it/292x200">
-            <img class="top" src="http://placehold.it/292x200/E8117F/000000">
+            <img src="{{ url_for('static', filename='images/Innovate-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Innovate-350x185-over.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Innovate-350x185.jpg') }}'">
         </div>
-        <div class="home_square_br col-md-3" ><img src="http://placehold.it/292x200"></div>
-    </div>
+        <div class="home_square_br col-md-3" >
+             <img src="{{ url_for('static', filename='images/Explore-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Explore-350x185-over.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Explore-350x185.jpg') }}'">
+        </div>
     <div class="row">
-        <div class="home_square_ul col-md-3 col-md-offset-3"><img src="http://placehold.it/292x200"></div>
-        <div class="home_square_ur col-md-3" ><img src="http://placehold.it/292x200"></div>
+        <div class="home_square_ul col-md-3 col-md-offset-3">
+        <img src="{{ url_for('static', filename='images/Inspire-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Inspire-350x185-over.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Inspire-350x185.jpg') }}'"> 
+        </div>
+        <div class="home_square_ur col-md-3" >
+<img src="{{ url_for('static', filename='images/Care-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Care-350x185-over.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Care-350x185.jpg') }}'">
+        </div>
     </div>  
 {% endblock %}
