--- a/templates/base.html
+++ b/templates/base.html
@@ -70,9 +70,9 @@
     <hr>
     {% block footer %}
     <footer class="footer">
-    <div style="margin: 0 auto, or margin-left: auto, margin-right:auto;">
-        <img src="{{ url_for('static', filename='images/MUHClogoColourTranspBkg350x75.png') }}">
-        <img src="{{ url_for('static', filename='images/RVHF-logo350x53.jpg') }}">
+    <div class="row">
+        <div class="col-md-3 col-md-offset-2"><img src="{{ url_for('static', filename='images/MUHClogoColourTranspBkg350x75.png') }}"></div>
+        <div class="col-md-3 col-md-offset-2"><img src="{{ url_for('static', filename='images/RVHF-logo350x53.jpg') }}"></div>
     </div>    
     </footer>
     {% endblock %}
