--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,19 @@
 {% block title %} - Home{% endblock %}
 {% block content %}
     <div class="row">
-        <div class="home_square_ul col-md-3 col-md-offset-3">
-            <img src="{{ url_for('static', filename='images/Innovate-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Innovate-350x185-over.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Innovate-350x185.jpg') }}'">
+        <div class="home_square_ul col-md-3 col-md-offset-2">
+            <img src="{{ url_for('static', filename='images/Innovate-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Innovate.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Innovate-350x185.jpg') }}'">
         </div>
-        <div class="home_square_br col-md-3" >
-             <img src="{{ url_for('static', filename='images/Explore-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Explore-350x185-over.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Explore-350x185.jpg') }}'">
-        </div>
+        <div class="home_square_br col-md-3 col-md-offset-1" >
+             <img src="{{ url_for('static', filename='images/Explore-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Explore.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Explore-350x185.jpg') }}'">
+         </div>
+    </div>
     <div class="row">
-        <div class="home_square_ul col-md-3 col-md-offset-3">
-        <img src="{{ url_for('static', filename='images/Inspire-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Inspire-350x185-over.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Inspire-350x185.jpg') }}'"> 
+        <div class="home_square_ul col-md-3 col-md-offset-2">
+            <img src="{{ url_for('static', filename='images/Inspire-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Inspire.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Inspire-350x185.jpg') }}'"> 
         </div>
-        <div class="home_square_ur col-md-3" >
-<img src="{{ url_for('static', filename='images/Care-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Care-350x185-over.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Care-350x185.jpg') }}'">
+        <div class="home_square_ur col-md-3 col-md-offset-1" >
+<img src="{{ url_for('static', filename='images/Care-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Care.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Care-350x185.jpg') }}'">
         </div>
     </div>  
 {% endblock %}
