modify hover image and over image on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,18 @@
 {% block content %}
     <div class="row">
         <div class="home_square_ul col-md-3 col-md-offset-2">
-            <a href="/projects/innovate"><img src="{{ url_for('static', filename='images/Innovate-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Innovate.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Innovate-350x185.jpg') }}'"></a>
+            <a href="/projects/innovate"><img src="{{ url_for('static', filename='images/Innovate.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Innovate-hover.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Innovate.jpg') }}'"></a>
         </div>
         <div class="home_square_br col-md-3 col-md-offset-1" >
-            <a href="/projects/explore"><img src="{{ url_for('static', filename='images/Explore-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Explore.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Explore-350x185.jpg') }}'"></a>
+            <a href="/projects/explore"><img src="{{ url_for('static', filename='images/Explore.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Explore-hover.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Explore.jpg') }}'"></a>
          </div>
     </div>
     <div class="row">
         <div class="home_square_ul col-md-3 col-md-offset-2">
-            <a href="/projects/inspire"><img src="{{ url_for('static', filename='images/Inspire-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Inspire.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Inspire-350x185.jpg') }}'"></a> 
+            <a href="/projects/inspire"><img src="{{ url_for('static', filename='images/Inspire.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Inspire-hover.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Inspire.jpg') }}'"></a> 
         </div>
         <div class="home_square_ur col-md-3 col-md-offset-1" >
-            <a href="/projects/care"><img src="{{ url_for('static', filename='images/Care-350x185.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Care.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Care-350x185.jpg') }}'"></a>
+            <a href="/projects/care"><img src="{{ url_for('static', filename='images/Care.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Care-hover.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Care.jpg') }}'"></a>
         </div>
     </div>  
 {% endblock %}
