--- a/templates/base.html
+++ b/templates/base.html
@@ -64,8 +64,8 @@
     {% block footer %}
     <footer class="footer">
     <div class="row">
-        <div class="col-md-3 col-md-offset-2"><img src="{{ url_for('static', filename='images/MUHClogoColourTranspBkg350x75.png') }}"></div>
-        <div class="col-md-3 col-md-offset-1"><img src="{{ url_for('static', filename='images/RVHF-logo350x53.jpg') }}"></div>
+        <div class="col-md-3 col-md-offset-2"><a href="http://www.muhc.ca"><img src="{{ url_for('static', filename='images/MUHClogoColourTranspBkg350x75.png') }}"></a></div>
+        <div class="col-md-3 col-md-offset-1"><a href="http://www.royalvic.com"><img src="{{ url_for('static', filename='images/RVHF-logo350x53.jpg') }}"></a></div>
     </div>    
     </footer>
     {% endblock %}
