fix the project layout

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     {% for project in projects %}
-    <div class="col-sm-6 col-md-4">
+    <div class="col-sm-6 col-md-4 fix">
         <div class="thumbnail">
             <img src="{{ project.thumbnail }}" alt="...">
             <br /> 
