--- a/templates/projects.html
+++ b/templates/projects.html
@@ -15,7 +15,7 @@
             <div class="caption">
                 <h3>{{ project.title }}</h3>
                 <p>{{ project.description }}</p>
-                <a href="#" class="btn btn-danger" role="button">Donate now</a>
+                <a href="{{ project.akaraisin_url }}" class="btn btn-danger" role="button">Donate now</a>
             </div>
         </div>
     </div>
