--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,8 @@
     <div class="row">
         <div class="col-md-3 col-md-offset-2"><a href="http://www.muhc.ca"><img src="{{ url_for('static', filename='images/MUHClogoColourTranspBkg350x75.png') }}"></a></div>
         <div class="col-md-3 col-md-offset-1"><a href="http://www.royalvic.com"><img src="{{ url_for('static', filename='images/RVHF-logo350x53.jpg') }}"></a></div>
-    </div>    
+    </div>
+    <div class="row"><div class="col-md-6 col-md-offset-2"><small>Proud partners in the McGill University Health Centre</small></div></div>
     </footer>
     {% endblock %}
 </div><!-- /.container page -->
