--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                 <li><a href="/projects/care">Care</a></li>
                </ul>
             </li>
-            <li><a href="about">About</a>
+            <!-- <li><a href="about">About</a> -->
             
         </ul>
        </div><!-- /.navbar-collapse -->
