add link to transalation site on each section

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block title %} - Projects{% endblock %}
+{% block traduction %}
+<li><a href="http://trousseroyalvic.com/projets">Français</a>
+{% endblock %}
+
 {% block content %}
 <div class="row">
     {% for project in projects %}
