--- a/templates/base.html
+++ b/templates/base.html
@@ -49,9 +49,22 @@
                </ul>
             </li>
             <!-- <li><a href="about">About</a> -->
-            
         </ul>
-       </div><!-- /.navbar-collapse -->
+         
+         <ul class="nav navbar-nav navbar-right">
+              {% block traduction %}
+              {% endblock %}
+              <!--
+              <form class="navbar-form navbar-left" role="search">
+                   <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                      <button type="submit" class="btn btn-default">Submit</button>
+                       </form>
+                       -->
+                    </ul>
+       
+         </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>                                  
 {% endblock %}
