--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block title %} - Home{% endblock %}
+{% block traduction %}
+<li><a href="http://trousseroyalvic.com">Français</a>
+{% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="home_square_ul col-md-3 col-md-offset-2">
