add link to home to title in menu bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand royalvictitle" href="#">RoyalVic First Aid Kit</a>
+        <a class="navbar-brand royalvictitle" href="/">RoyalVic First Aid Kit</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
