--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@
     height: 500px;
 }
 
-/* Portrait tablet to landscape and desktop */ 
+/* Portrait tablet to landscape and desktop - above doesn't change */ 
 @media (min-width: 768px) and (max-width: 979px) { 
     
     .home_square_br{
