--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,11 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
     <script src="{{ url_for('static', filename='firstaidkit.js') }}"></script> 
     <link rel="shortcut icon" href="{{ url_for('static', filename='ico/favicon.ico') }}">
+    <!-- html5.js & media-queries.js (fallback) --> 
+    <!--[if lt IE 9]> 
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> 
+    <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+    <![endif]-->
     {% endblock %}
 </head>
     
