--- a/templates/projectsBySection.html
+++ b/templates/projectsBySection.html
@@ -21,7 +21,7 @@
     {% for project in projects %}
     <div class="col-sm-6 col-md-4 fix">
         <div class="thumbnail">
-            <img src="{{ project.thumbnail }}" alt="..." width="350" height="160">
+            <a href="{{ project.akaraisin_url}}"><img src="{{ project.thumbnail }}" alt="..." width="350" height="160"></a>
             <br /> 
             <div class="progress">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: {{ (project.amountFunded|int / project.amountGoal|int) * 100 }}%">
@@ -31,7 +31,7 @@
             <div class="caption">
                 <h3>{{ project.title }}</h3>
                 <p>{{ project.description }}</p>
-                <a href="{{ project.akaraisin_url }}" class="btn btn-danger" role="button">Donate now</a>
+                <a href="{{ project.akaraisin_url }}" class="btn btn-danger" role="button">More</a>
             </div>
         </div>
     </div>
