--- a/templates/about.html
+++ b/templates/about.html
@@ -2,40 +2,22 @@
 {% block title %} - About{% endblock %}
 {% block content %}
 <div class="jumbotron">
-  <h1>How it works ?</h1>
+  {% for a in about %} 
+  <h1>{{ a.bigTitle }}</h1>
   </div>
   <div class="row">
     <div class="col-lg-4">
-        <h2>How does is work?</h2>
-        <p>bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <h3>How does is work fsdfaa</h3>
-        <p>bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
+        <h2>{{ a.hditwTitle }}</h2>
+        <p>{{ a.hdiwContent|safe }}</p>
     </div>
     <div class="col-lg-4">
-        <h2>Our Mission?</h2>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <h3>How does is work?</h3>
-        <p>bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
- 
+        <h2>{{ a.missionTitle }}</h2>
+        <p>{{ a.missionContent|safe }}</p>
     </div>
     <div class="col-lg-4">
-        <h2>Other questions ?</h2>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <h3>How does is work?</h3>
-        <p>bla bla bla bla bla bla bla bla bla bla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-        <p>bla bla bla bla blabla bla bla bla bla</p>
-
+        <h2>{{ a.QuestionTitle }}</h2>
+        <p>{{ a.QuestionContent }}</p>
     </div>
   </div>
+  {% endfor %}
 {% endblock %}
