--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             <a href="/projects/innovate"><img src="{{ url_for('static', filename='images/Innovate.jpg') }}" onmouseover="this.src='{{ url_for('static', filename='images/Innovate-hover.jpg') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Innovate.jpg') }}'"></a>
         </div>
         <div class="home_square_br col-md-3 col-md-offset-1" >
-            <a href="/projects/explore"><img src="{{ url_for('static', filename='images/Explore.png') }}" onmouseover="this.src='{{ url_for('static', filename='images/Explore-hover.png') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Explore.jpg') }}'"></a>
+            <a href="/projects/explore"><img src="{{ url_for('static', filename='images/Explore.png') }}" alt="explore" onmouseover="this.src='{{ url_for('static', filename='images/Explore-hover.png') }}'" onmouseout="this.src='{{ url_for('static', filename='images/Explore.jpg') }}'"></a>
          </div>
     </div>
     <div class="row">
