--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
+<h1>All Projects</h1>
+<br />
 <div class="row">
     {% for project in projects %}
     <div class="col-sm-6 col-md-4 fix">
