correct error inspire h1 section

--- a/templates/projectsBySection.html
+++ b/templates/projectsBySection.html
@@ -26,7 +26,7 @@
         <br />
     {% endif %}
     {% if request.path == "/projects/inspire" %}
-        <h1>Inpire</h1>
+        <h1>Inspire</h1>
         <br />
     {% endif %}
     {% if request.path == "/projects/care" %}
